# Methodism

./: .gitignore  README.md  pyproject.toml  requirements  setup.cfg
.github/workflows/: python-publish.yml
base/: costumizing.py  decors.py  error_messages.py  main.py
methodism/: __init__.py  costumizing.py  decors.py  error_messages.py  helper.py  main.py  models.py
