[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Django>=4.2",
    "djangorestframework>=3.14.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "methodism"
version = "0.0.2"
authors = [
  { name="xudikk", email="xudikk.1@gmail.com" },
]
description = "Help to build APIs Faster"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xudikk/Methodism"
