[metadata]
name = methodism
version = 0.0.1
author = xudikk
author_email = xudikk.1@gmail.com
description = Help to build APIs Faster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xudoyberdi123/Methodism
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True